--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "plus-a-student-students-management-api",
+  "name": "plus-a-students-management-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "tsc:init": "tsc --init",
     "build": "tsc",
-    "test": "tsc && jest /dist"
+    "test": "tsc && jest /dist",
+    "db-init": "docker-compose up -d"
   },
   "author": "LAsant0s",
   "license": "ISC",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "ts-node-dev": "^2.0.0"
   }
 }
