--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/server.ts",
     "tsc:init": "tsc --init",
     "build": "tsc",
     "test": "tsc && jest /dist",
@@ -12,10 +13,15 @@
   "author": "LAsant0s",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.2",
+    "express": "^4.18.2",
+    "pg": "^8.11.3",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
+    "@types/pg": "^8.11.0",
     "jest": "^29.7.0",
     "ts-node-dev": "^2.0.0"
   }
