--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,12 +13,14 @@
   "author": "LAsant0s",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/pg": "^8.11.0",
