--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "scss": "^0.2.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-the-mask": "^0.11.1",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
